--- a/_posts/leetcode/leetcode200/2021-01-05-leetcode-107.md
+++ b/_posts/leetcode/leetcode200/2021-01-05-leetcode-107.md
@@ -4,7 +4,7 @@ index: 107
 title: "LeetCode-107.二叉树的层序遍历 II(Binary Tree Level Order Traversal II)"
 categories: Leetcode
 tags: Tree Breadth-first-search
-excerpt: "知乎帮拼多多看了一刀"
+excerpt: "知乎帮拼多多砍了一刀"
 ---
 
 * content
