--- a/_posts/leetcode/leetcode100/2020-08-11-leetcode-30.md
+++ b/_posts/leetcode/leetcode100/2020-08-11-leetcode-30.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 30
-title: "30. 串联所有单词的子串(Substring with Concatenation of All Words)"
+title: "LeetCode-30.串联所有单词的子串(Substring with Concatenation of All Words)"
 categories: Leetcode
 tags: String Hash-table Two-pointers
 excerpt: "第一组30道题结束了"
@@ -10,7 +10,7 @@ excerpt: "第一组30道题结束了"
 * content
 {:toc}
 
-## 30. Substring with Concatenation of All Words
+## 30. 串联所有单词的子串
 
 给定一个字符串 s 和一些长度相同的单词 words。找出 s 中恰好可以由 words 中所有单词串联形成的子串的起始位置。
 
@@ -36,6 +36,12 @@ excerpt: "第一组30道题结束了"
   words = ["word","good","best","word"]
 输出：[]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/](https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/)
+
+Link：[https://leetcode.com/problems/substring-with-concatenation-of-all-words/](https://leetcode.com/problems/substring-with-concatenation-of-all-words/)
 
 ## 哈希
 
