--- a/_posts/life/2021-01-07-2020-review.md
+++ b/_posts/life/2021-01-07-2020-review.md
@@ -12,7 +12,7 @@ excerpt: "pick me"
 
 ## 生活
 
-![2020_year_review](http://geemaple.github.io/images/2020_year_review.png)]
+![2020_year_review](http://geemaple.github.io/images/2020_year_review.png)
 
 这一年C-19伴随着归乡的游子从热干面发源地迅速散播到全中国，前几天我还在和同学东北开车四处玩雪🏂，还没过年就惊讶于已经传到东北老家了。匆匆买了口罩分了分回家了。这一天，已经大年三十了。
 
