--- a/_posts/life/2021-01-07-2020-review.md
+++ b/_posts/life/2021-01-07-2020-review.md
@@ -2,9 +2,9 @@
 layout: post
 title: "2020年终终结"
 date:   2021-01-07
-categories: life
+categories: Life
 tags: 2020 年终终结
-excerpt: "pick me"
+excerpt: "2020"
 ---
 
 * content
