--- a/_posts/leetcode/leetcode100/2020-08-14-leetcode-31.md
+++ b/_posts/leetcode/leetcode100/2020-08-14-leetcode-31.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 31
-title: "31. 下一个排列(Next Permutation)"
+title: "LeetCode-31.下一个排列(Next Permutation)"
 categories: Leetcode
 tags: Array
 excerpt: "迟到的kickoff"
@@ -10,7 +10,7 @@ excerpt: "迟到的kickoff"
 * content
 {:toc}
 
-## 31. Next Permutation
+## 31. 下一个排列
 
 实现获取下一个排列的函数，算法需要将给定数字序列重新排列成字典序中下一个更大的排列。
 
@@ -25,6 +25,12 @@ excerpt: "迟到的kickoff"
 3,2,1 → 1,2,3
 1,1,5 → 1,5,1
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/next-permutation/](https://leetcode-cn.com/problems/next-permutation/)
+
+Link：[https://leetcode.com/problems/next-permutation/](https://leetcode.com/problems/next-permutation/)
 
 ## 暴力破解
 
