--- a/_posts/leetcode/leetcode200/2021-01-11-leetcode-110.md
+++ b/_posts/leetcode/leetcode200/2021-01-11-leetcode-110.md
@@ -4,7 +4,7 @@ index: 110
 title: "LeetCode-110.平衡二叉树(Balanced Binary Tree)"
 categories: Leetcode
 tags: Tree Depth-first-search Recursion
-excerpt: ""
+excerpt: "愿你能有选择"
 ---
 
 * content
