--- a/_posts/leetcode/leetcode100/2020-08-16-leetcode-32.md
+++ b/_posts/leetcode/leetcode100/2020-08-16-leetcode-32.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 32
-title: "32. 最长有效括号(Longest Valid Parentheses)"
+title: "LeetCode-32.最长有效括号(Longest Valid Parentheses)"
 categories: Leetcode
 tags: String Dynamic-programming
 excerpt: "It's Ok"
@@ -10,7 +10,7 @@ excerpt: "It's Ok"
 * content
 {:toc}
 
-## 32. Longest Valid Parentheses
+## 32. 最长有效括号
 
 给定一个只包含 '(' 和 ')' 的字符串，找出最长的包含有效括号的子串的长度。
 
@@ -29,6 +29,12 @@ excerpt: "It's Ok"
 输出: 4
 解释: 最长有效括号子串为 "()()"
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/longest-valid-parentheses/](https://leetcode-cn.com/problems/longest-valid-parentheses/)
+
+Link：[https://leetcode.com/problems/longest-valid-parentheses/](https://leetcode.com/problems/longest-valid-parentheses/)
 
 ## 暴力破解
 
