--- a/_posts/leetcode/leetcode200/2021-01-16-leetcode-190.md
+++ b/_posts/leetcode/leetcode200/2021-01-16-leetcode-190.md
@@ -90,6 +90,8 @@ class Solution:
 
 ## One More Thing
 
+关于如何优化，有人说加上缓存，理论上速度会更快, 但实际有人测试速度反而更慢, 远不如以下的代码:
+
 以下可以说是分治的思想, 部分左右互换, 以8进制为例子:
 
 ```python
