--- a/_posts/leetcode/leetcode200/2021-01-16-leetcode-190.md
+++ b/_posts/leetcode/leetcode200/2021-01-16-leetcode-190.md
@@ -53,7 +53,7 @@ Link：[https://leetcode.com/problems/reverse-bits/](https://leetcode.com/proble
 
 ## 二进制
 
-O(1)
+O(1), 执行次数 = 32次
 
 每次拿到最后一位之后，原数字右移。然后把最后一位放入结果，做移动。
 
@@ -89,6 +89,8 @@ class Solution:
 ```
 
 ## One More Thing
+
+O(1), 执行次数log32 = 5次
 
 关于如何优化，有人说加上缓存，理论上速度会更快, 但实际有人测试速度反而更慢, 远不如以下的代码:
 
