--- a/_posts/leetcode/leetcode100/2020-08-17-leetcode-33.md
+++ b/_posts/leetcode/leetcode100/2020-08-17-leetcode-33.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 33
-title: "33. 搜索旋转排序数组(Search in Rotated Sorted Array)"
+title: "LeetCode-33.搜索旋转排序数组(Search in Rotated Sorted Array)"
 categories: Leetcode
 tags: Array Binary-search
 excerpt: "即兴发挥才是自己的"
@@ -10,7 +10,7 @@ excerpt: "即兴发挥才是自己的"
 * content
 {:toc}
 
-## 33. Search in Rotated Sorted Array
+## 33. 搜索旋转排序数组
 
 假设按照升序排序的数组在预先未知的某个点上进行了旋转。
 
@@ -35,6 +35,12 @@ excerpt: "即兴发挥才是自己的"
 输入: nums = [4,5,6,7,0,1,2], target = 3
 输出: -1
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/search-in-rotated-sorted-array/](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/)
+
+Link：[https://leetcode.com/problems/search-in-rotated-sorted-array/](https://leetcode.com/problems/search-in-rotated-sorted-array/)
 
 ## 暴力破解
 
