--- a/_posts/leetcode/leetcode100/2020-08-18-leetcode-34.md
+++ b/_posts/leetcode/leetcode100/2020-08-18-leetcode-34.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 34
-title: "34. 在排序数组中查找元素的第一个和最后一个位置(Find First and Last Position of Element in Sorted Array)"
+title: "LeetCode-34.在排序数组中查找元素的第一个和最后一个位置(Find First and Last Position of Element in Sorted Array)"
 categories: Leetcode
 tags: Array Binary-search
 excerpt: "One Piece"
@@ -10,7 +10,7 @@ excerpt: "One Piece"
 * content
 {:toc}
 
-## 34. Find First and Last Position of Element in Sorted Array
+## 34. 在排序数组中查找元素的第一个和最后一个位置
 
 给定一个按照升序排列的整数数组 nums，和一个目标值 target。找出给定目标值在数组中的开始位置和结束位置。
 
@@ -31,6 +31,12 @@ excerpt: "One Piece"
 输入: nums = [5,7,7,8,8,10], target = 6
 输出: [-1,-1]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
+
+Link：[https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
 ## 暴力破解
 
