--- a/_posts/leetcode/leetcode100/2020-08-20-leetcode-35.md
+++ b/_posts/leetcode/leetcode100/2020-08-20-leetcode-35.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 35
-title: "35. 搜索插入位置(Search Insert Position)"
+title: "LeetCode-35.搜索插入位置(Search Insert Position)"
 categories: Leetcode
 tags: Array Binary-search
 excerpt: "信仰"
@@ -10,7 +10,7 @@ excerpt: "信仰"
 * content
 {:toc}
 
-## 35. Search Insert Position
+## 35. 搜索插入位置
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
 
@@ -43,6 +43,12 @@ excerpt: "信仰"
 输入: [1,3,5,6], 0
 输出: 0
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/search-insert-position/](https://leetcode-cn.com/problems/search-insert-position/)
+
+Link：[https://leetcode.com/problems/search-insert-position/](https://leetcode.com/problems/search-insert-position/)
 
 ## 暴力破解
 
