--- a/_posts/leetcode/leetcode200/2021-01-20-leetcode-112.md
+++ b/_posts/leetcode/leetcode200/2021-01-20-leetcode-112.md
@@ -108,6 +108,22 @@ class Solution:
         
         return False
 ```
+
+简洁代码
+
+```python
+class Solution:
+    def hasPathSum(self, root: TreeNode, sum: int) -> bool:
+        
+        if root is None:
+            return False
+        
+        if root.left is None and root.right is None:
+            return sum == root.val
+            
+        return self.hasPathSum(root.left, sum - root.val) or self.hasPathSum(root.right, sum - root.val)
+```
+
 --End--
 
 
