--- a/_posts/leetcode/leetcode200/2021-01-21-leetcode-113.md
+++ b/_posts/leetcode/leetcode200/2021-01-21-leetcode-113.md
@@ -55,37 +55,66 @@ O(N)
 要找到所有的答案, 那么基本上都是DFS无疑了。
 
 ```python
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, val=0, left=None, right=None):
-#         self.val = val
-#         self.left = left
-#         self.right = right
 class Solution:
-    def pathSum(self, root: TreeNode, targetSum: int) -> List[List[int]]:
-                
+    def pathSum(self, root: TreeNode, sum: int) -> List[List[int]]:
+        
         res = []
-        self.helper(root, targetSum, [], res)
+        self.helper(root, sum, [], res)
         return res
         
         
-    def helper(self, root: TreeNode, targetSum: int,  ans: List[int], res: List[List[int]]):
+    def helper(self, node: TreeNode, target: int, ans: List[int], res: List[List[int]]):
         
-        if root is None:
-            return 
+        if node is None:
+            return
         
-        ans.append(root.val)
+        if node.left is None and node.right is None and target == node.val:
+            res.append(ans + [node.val])
+            
+        self.helper(node.left, target - node.val, ans + [node.val], res)
+        self.helper(node.right, target - node.val, ans + [node.val], res)
+```
+
+标准回溯
+
+```python
+class Solution:
+    def pathSum(self, root: TreeNode, sum: int) -> List[List[int]]:
         
-        if root.left is None and root.right is None and root.val == targetSum:
+        res = []
+        self.helper(root, sum, [], res)
+        return res
+        
+        
+    def helper(self, node: TreeNode, target: int, ans: List[int], res: List[List[int]]):
+        
+        if node is None:
+            return
+        
+        ans.append(node.val)
+
+        if node.left is None and node.right is None and target == node.val:
             res.append(ans.copy())
             
-        if root.left is not None:
-            self.helper(root.left, targetSum - root.val, ans, res)
-        
-        if root.right is not None:
-            self.helper(root.right, targetSum - root.val, ans, res)
-        
+        self.helper(node.left, target - node.val, ans, res)
+        self.helper(node.right, target - node.val, ans, res)
         ans.pop()
+```
+
+简洁代码
+
+```python
+class Solution:
+    def pathSum(self, root: TreeNode, sum: int) -> List[List[int]]:
+        
+        if root is None:
+            return []
+        
+        if root.left is None and root.right is None and sum == root.val:
+            return [[root.val]]
+        
+        tmp = self.pathSum(root.left, sum - root.val) + self.pathSum(root.right, sum - root.val)
+        return [[root.val] + sub for sub in tmp]
 ```
 
 ## 宽度优先搜索
