--- a/_posts/leetcode/leetcode100/2020-08-21-leetcode-36.md
+++ b/_posts/leetcode/leetcode100/2020-08-21-leetcode-36.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 36
-title: "36. 有效的数独(Valid Sudoku)"
+title: "LeetCode-36.有效的数独(Valid Sudoku)"
 categories: Leetcode
 tags: Hash-table
 excerpt: "1914 WWI"
@@ -10,7 +10,7 @@ excerpt: "1914 WWI"
 * content
 {:toc}
 
-## 36. Valid Sudoku
+## 36. 有效的数独
 
 判断一个 9x9 的数独是否有效。只需要根据以下规则，验证已经填入的数字是否有效即可。
 
@@ -68,6 +68,12 @@ excerpt: "1914 WWI"
 只需要根据以上规则，验证已经填入的数字是否有效即可。
 给定数独序列只包含数字 1-9 和字符 '.' 。
 给定数独永远是 9x9 形式的。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/valid-sudoku/](https://leetcode-cn.com/problems/valid-sudoku/)
+
+Link：[https://leetcode.com/problems/valid-sudoku/](https://leetcode.com/problems/valid-sudoku/)
 
 ## 哈希
 
