Add. 并查集， 力扣547

--- a/_posts/leetcode/leetcode100/2020-08-22-leetcode-37.md
+++ b/_posts/leetcode/leetcode100/2020-08-22-leetcode-37.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 37
-title: "37. 解数独(Sudoku Solver)"
+title: "LeetCode-37.解数独(Sudoku Solver)"
 categories: Leetcode
 tags: Hash-table Backtracking
 excerpt: "权力游戏"
@@ -10,7 +10,7 @@ excerpt: "权力游戏"
 * content
 {:toc}
 
-## 37. Sudoku Solver
+## 37. 解数独
 
 编写一个程序，通过已填充的空格来解决数独问题。
 
@@ -34,6 +34,12 @@ Note:
 给定的数独序列只包含数字 1-9 和字符 '.' 。
 你可以假设给定的数独只有唯一解。
 给定数独永远是 9x9 形式的。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/sudoku-solver/](https://leetcode-cn.com/problems/sudoku-solver/)
+
+Link：[https://leetcode.com/problems/sudoku-solver/](https://leetcode.com/problems/sudoku-solver/)
 
 ## DFS
 
