--- a/_posts/leetcode/leetcode100/2020-08-27-leetcode-38.md
+++ b/_posts/leetcode/leetcode100/2020-08-27-leetcode-38.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 38
-title: "38. 外观数列(Count and Say)"
+title: "LeetCode-38.外观数列(Count and Say)"
 categories: Leetcode
 tags: String
 excerpt: "This is water"
@@ -10,7 +10,7 @@ excerpt: "This is water"
 * content
 {:toc}
 
-## 38. Count and Say
+## 38. 外观数列
 
 给定一个正整数 n（1 ≤ n ≤ 30），输出外观数列的第 n 项。
 
@@ -47,6 +47,12 @@ excerpt: "This is water"
 输出: "1211"
 解释：当 n = 3 时，序列是 "21"，其中我们有 "2" 和 "1" 两组，"2" 可以读作 "12"，也就是出现频次 = 1 而 值 = 2；类似 "1" 可以读作 "11"。所以答案是 "12" 和 "11" 组合在一起，也就是 "1211"。
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/count-and-say/](https://leetcode-cn.com/problems/count-and-say/)
+
+Link：[https://leetcode.com/problems/count-and-say/](https://leetcode.com/problems/count-and-say/)
 
 ## 模拟法
 
