--- a/_posts/leetcode/leetcode100/2020-08-29-leetcode-39.md
+++ b/_posts/leetcode/leetcode100/2020-08-29-leetcode-39.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 39
-title: "39. 组合总和(Combination Sum)"
+title: "LeetCode-39.组合总和(Combination Sum)"
 categories: Leetcode
 tags: Array Backtracking
 excerpt: "AlphaGo"
@@ -10,7 +10,7 @@ excerpt: "AlphaGo"
 * content
 {:toc}
 
-## 39. Combination Sum
+## 39. 组合总和
 
 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和等于 target 的组合。
 
@@ -52,6 +52,12 @@ candidates 中的数字可以无限制重复被选取。
 candidate 中的每个元素都是独一无二的。
 1 <= target <= 500
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/combination-sum/](https://leetcode-cn.com/problems/combination-sum/)
+
+Link：[https://leetcode.com/problems/combination-sum/](https://leetcode.com/problems/combination-sum/)
 
 ## DFS
 
