--- a/_posts/leetcode/leetcode100/2020-08-30-leetcode-40.md
+++ b/_posts/leetcode/leetcode100/2020-08-30-leetcode-40.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 40
-title: "40. 组合总和 II(Combination Sum II)"
+title: "LeetCode-40.组合总和 II(Combination Sum II)"
 categories: Leetcode
 tags: Array Backtracking
 excerpt: "剪枝优化"
@@ -12,7 +12,7 @@ excerpt: "剪枝优化"
 
 > 深度优先搜索复杂度很高的，剪枝是比较有效的优化策略
 
-## 40. Combination Sum II
+## 40. 组合总和 II
 
 给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
 
@@ -46,6 +46,12 @@ candidates 中的每个数字在每个组合中只能使用一次。
   [5]
 ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/combination-sum-ii/](https://leetcode-cn.com/problems/combination-sum-ii/)
+
+Link：[https://leetcode.com/problems/combination-sum-ii/](https://leetcode.com/problems/combination-sum-ii/)
 
 ## DFS
 
