Fix. 力扣1732重复检查

--- a/_posts/leetcode/leetcode1700/2021-02-08-leetcode-1732.md
+++ b/_posts/leetcode/leetcode1700/2021-02-08-leetcode-1732.md
@@ -14,17 +14,17 @@ excerpt: "等风来"
 
 问世间是否此山最高, 或者另有高处比天高
 
-认准几个领域，在该领域默默的坚持，等待风口的到来
+认准几个领域，在该领域不断的前行，等待机遇的到来
 
-专注是一种能力，尤其是在要过年的时候.
+专注是一种能力，尤其是在要过年的时候
 
 闲着也是闲着，得学点东西，学东西得学点难的
 
 ## 1732. 找到最高海拔
 
-有一个自行车手打算进行一场公路骑行，这条路线总共由 n + 1 个不同海拔的点组成。自行车手从海拔为 0 的点 0 开始骑行。
+有一个自行车骑行爱好者，打算沿着公路骑行。路上有N + 1个检查点，每个检查点有不同的海拔高度
 
-给你一个长度为 n 的整数数组 gain ，其中 gain[i] 是点 i 和点 i + 1 的 净海拔高度差（0 <= i < n）。请你返回 最高点的海拔 。
+该骑行爱好者的起始点海拔高度为0, 给一个长度为N的海拔差值数组gain。gain[i]的值是点 i 和点 i + 1 的海拔高度差值, 其中0 <= i < n, 请返回骑手经过的最高海拔高度。
 
 示例 1：
 
