--- a/_posts/leetcode/leetcode100/2020-08-31-leetcode-41.md
+++ b/_posts/leetcode/leetcode100/2020-08-31-leetcode-41.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 41
-title: "41. 缺失的第一个正数(First Missing Positive)"
+title: "LeetCode-41.缺失的第一个正数(First Missing Positive)"
 categories: Leetcode
 tags: Array
 excerpt: "索姆河战役"
@@ -39,7 +39,15 @@ excerpt: "索姆河战役"
  
 提示：
 
+```
 你的算法的时间复杂度应为O(n)，并且只能使用常数级别的额外空间。
+```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/first-missing-positive/](https://leetcode-cn.com/problems/first-missing-positive/)
+
+Link：[https://leetcode.com/problems/first-missing-positive/](https://leetcode.com/problems/first-missing-positive/)
 
 ## 哈希(字典/集合)
 
