--- a/_posts/leetcode/leetcode100/2020-09-01-leetcode-42.md
+++ b/_posts/leetcode/leetcode100/2020-09-01-leetcode-42.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 42
-title: "42. 接雨水(Trapping Rain Water)"
+title: "LeetCode-42.接雨水(Trapping Rain Water)"
 categories: Leetcode
 tags: Array Two-pointers Stack
 excerpt: "木桶效应"
@@ -10,7 +10,7 @@ excerpt: "木桶效应"
 * content
 {:toc}
 
-## 42. Trapping Rain Water
+## 42. 接雨水
 
 给定 n 个非负整数表示每个宽度为 1 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
 
@@ -24,6 +24,12 @@ excerpt: "木桶效应"
 输入: [0,1,0,2,1,0,1,3,2,1,2,1]
 输出: 6
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/trapping-rain-water/](https://leetcode-cn.com/problems/trapping-rain-water/)
+
+Link：[https://leetcode.com/problems/trapping-rain-water/](https://leetcode.com/problems/trapping-rain-water/)
 
 ## 两遍扫描
 
@@ -43,7 +49,7 @@ O(N)
    x          ##            x       
 ---------------------------------
 左边最高         i         右边最高
-````
+```
 
 1. 从左到右扫描, 记录到扫描位置i为止，最高的左边
 2. 从右到左扫描, 记录到扫描位置j为止，最高的右边
