--- a/_posts/leetcode/leetcode100/2020-09-03-leetcode-43.md
+++ b/_posts/leetcode/leetcode100/2020-09-03-leetcode-43.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 43
-title: "43. 字符串相乘(Multiply Strings)"
+title: "LeetCode-43.字符串相乘(Multiply Strings)"
 categories: Leetcode
 tags: Math String
 excerpt: "降龙十八掌"
@@ -12,7 +12,7 @@ excerpt: "降龙十八掌"
 
 > 算法是屠龙之术，但世界上龙又有多少呢？
 
-## 43. Multiply Strings
+## 43. 字符串相乘
 
 给定两个以字符串形式表示的非负整数 num1 和 num2，返回 num1 和 num2 的乘积，它们的乘积也表示为字符串形式。
 
@@ -36,6 +36,12 @@ excerpt: "降龙十八掌"
 2. num1 和 num2 只包含数字 0-9。
 3. num1 和 num2 均不以零开头，除非是数字 0 本身。
 4. 不能使用任何标准库的大数类型（比如 BigInteger）或直接将输入转换为整数来处理。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/multiply-strings/](https://leetcode-cn.com/problems/multiply-strings/)
+
+Link：[https://leetcode.com/problems/multiply-strings/](https://leetcode.com/problems/multiply-strings/)
 
 ## 模拟乘法
 
