--- a/_posts/leetcode/leetcode100/2020-09-05-leetcode-44.md
+++ b/_posts/leetcode/leetcode100/2020-09-05-leetcode-44.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 44
-title: "44. 通配符匹配(Wildcard Matching)"
+title: "LeetCode-44.通配符匹配(Wildcard Matching)"
 categories: Leetcode
 tags: String Dynamic-programming Backtracking Greedy
 excerpt: "镇魂街"
@@ -10,7 +10,7 @@ excerpt: "镇魂街"
 * content
 {:toc}
 
-## 44. Wildcard Matching
+## 44. 通配符匹配
 
 给定一个字符串 (s) 和一个字符模式 (p) ，实现一个支持 '?' 和 '*' 的通配符匹配。
 
@@ -74,6 +74,12 @@ s = "acdcb"
 p = "a*c?b"
 输出: false
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/wildcard-matching/](https://leetcode-cn.com/problems/wildcard-matching/)
+
+Link：[https://leetcode.com/problems/wildcard-matching/](https://leetcode.com/problems/wildcard-matching/)
 
 ## 动态规划
 
