--- a/_posts/leetcode/leetcode100/2020-09-09-leetcode-45.md
+++ b/_posts/leetcode/leetcode100/2020-09-09-leetcode-45.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 45
-title: "45. 跳跃游戏 II(Jump Game II)"
+title: "LeetCode-45.跳跃游戏 II(Jump Game II)"
 categories: Leetcode
 tags: Array Greedy
 excerpt: "风之旅人"
@@ -10,7 +10,7 @@ excerpt: "风之旅人"
 * content
 {:toc}
 
-## 45. Jump Game II
+## 45. 跳跃游戏 II
 
 给定一个非负整数数组，你最初位于数组的第一个位置。
 
@@ -30,6 +30,12 @@ excerpt: "风之旅人"
 说明:
 
 > 假设你总是可以到达数组的最后一个位置。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/jump-game-ii/](https://leetcode-cn.com/problems/jump-game-ii/)
+
+Link：[https://leetcode.com/problems/jump-game-ii/](https://leetcode.com/problems/jump-game-ii/)
 
 ## 动态规划
 
