--- a/_posts/leetcode/leetcode100/2020-09-10-leetcode-46.md
+++ b/_posts/leetcode/leetcode100/2020-09-10-leetcode-46.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 46
-title: "46. 全排列(Permutations)"
+title: "LeetCode-46.全排列(Permutations)"
 categories: Leetcode
 tags: Backtracking
 excerpt: "Flutter"
@@ -10,7 +10,7 @@ excerpt: "Flutter"
 * content
 {:toc}
 
-## 46. Permutations
+## 46. 全排列
 
 给定一个**没有重复**数字的序列，返回其所有可能的全排列。
 
@@ -28,6 +28,12 @@ excerpt: "Flutter"
   [3,2,1]
 ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/permutations/](https://leetcode-cn.com/problems/permutations/)
+
+Link：[https://leetcode.com/problems/permutations/](https://leetcode.com/problems/permutations/)
 
 ## DFS
 
