--- a/_posts/leetcode/leetcode100/2020-09-11-leetcode-47.md
+++ b/_posts/leetcode/leetcode100/2020-09-11-leetcode-47.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 47
-title: "47. 全排列 II(Permutations II)"
+title: "LeetCode-47.全排列 II(Permutations II)"
 categories: Leetcode
 tags: Backtracking
 excerpt: "吉祥物Dash"
@@ -10,7 +10,7 @@ excerpt: "吉祥物Dash"
 * content
 {:toc}
 
-## 47. Permutations II
+## 47. 全排列 II
 
 给定一个**可包含重复**数字的序列，返回所有不重复的全排列。
 
@@ -25,6 +25,12 @@ excerpt: "吉祥物Dash"
   [2,1,1]
 ]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/permutations-ii/](https://leetcode-cn.com/problems/permutations-ii/)
+
+Link：[https://leetcode.com/problems/permutations-ii/](https://leetcode.com/problems/permutations-ii/)
 
 ## 46. Permutations答案更新
 
