--- a/_posts/leetcode/leetcode100/2020-09-13-leetcode-48.md
+++ b/_posts/leetcode/leetcode100/2020-09-13-leetcode-48.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 48
-title: "48. 旋转图像(Rotate Image)"
+title: "LeetCode-48.旋转图像(Rotate Image)"
 categories: Leetcode
 tags: Array
 excerpt: "ZIV Hong"
@@ -10,7 +10,7 @@ excerpt: "ZIV Hong"
 * content
 {:toc}
 
-## 48. Rotate Image
+## 48. 旋转图像
 
 给定一个 n × n 的二维矩阵表示一个图像。
 
@@ -51,6 +51,12 @@ Output: [[1]]
 Input: matrix = [[1,2],[3,4]]
 Output: [[3,1],[4,2]]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/rotate-image/](https://leetcode-cn.com/problems/rotate-image/)
+
+Link：[https://leetcode.com/problems/rotate-image/](https://leetcode.com/problems/rotate-image/)
 
 ## 模拟法
 
