--- a/_posts/leetcode/leetcode100/2020-09-14-leetcode-49.md
+++ b/_posts/leetcode/leetcode100/2020-09-14-leetcode-49.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 49
-title: "49. 字母异位词分组(Group Anagrams)"
+title: "LeetCode-49.字母异位词分组(Group Anagrams)"
 categories: Leetcode
 tags: String Hash-table
 excerpt: "B计划"
@@ -10,7 +10,7 @@ excerpt: "B计划"
 * content
 {:toc}
 
-## 49. Group Anagrams
+## 49. 字母异位词分组
 
 给定一个字符串数组，将字母异位词组合在一起。字母异位词指字母相同，但排列不同的字符串。
 
@@ -31,6 +31,12 @@ excerpt: "B计划"
 所有输入均为小写字母。
 
 不考虑答案输出的顺序。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/group-anagrams/](https://leetcode-cn.com/problems/group-anagrams/)
+
+Link：[https://leetcode.com/problems/group-anagrams/](https://leetcode.com/problems/group-anagrams/)
 
 ## 排序+哈希
 
@@ -99,9 +105,3 @@ class Solution:
 ```
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/group-anagrams
-
-Link：https://leetcode.com/problems/group-anagrams/
