--- a/_posts/leetcode/leetcode100/2020-09-15-leetcode-50.md
+++ b/_posts/leetcode/leetcode100/2020-09-15-leetcode-50.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 50
-title: "50. 求X的N次方(Pow(x, n))"
+title: "LeetCode-50.求X的N次方(Pow(x, n))"
 categories: Leetcode
 tags: Math Binary-search
 excerpt: "苹果新品发布会"
@@ -38,9 +38,16 @@ excerpt: "苹果新品发布会"
 
 说明:
 
+```
 -100.0 < x < 100.0
-
 n 是 32 位有符号整数，其数值范围是 [−2^31, 2^31 − 1] 。
+```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/powx-n/](https://leetcode-cn.com/problems/powx-n/)
+
+Link：[https://leetcode.com/problems/powx-n/](https://leetcode.com/problems/powx-n/)
 
 ## 暴力破解
 
@@ -188,9 +195,3 @@ class Solution:
 ```
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/powx-n/
-
-Link：https://leetcode.com/problems/powx-n/
