--- a/_posts/leetcode/leetcode1700/2021-02-17-leetcode-1700.md
+++ b/_posts/leetcode/leetcode1700/2021-02-17-leetcode-1700.md
@@ -4,7 +4,7 @@ index: 1700
 title: "LeetCode-1700.无法吃午餐的学生数量(Number of Students Unable to Eat Lunch)"
 categories: Leetcode
 tags: Array
-excerpt: ""
+excerpt: "早安"
 ---
 
 * content
