--- a/_posts/leetcode/leetcode100/2020-09-18-leetcode-53.md
+++ b/_posts/leetcode/leetcode100/2020-09-18-leetcode-53.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 53
-title: "53. 最大子序和(Maximum Subarray)"
+title: "LeetCode-53.最大子序和(Maximum Subarray)"
 categories: Leetcode
 tags: Array Dynamic-programming Divide-and-conquer
 excerpt: "和平，土地，面包"
@@ -10,9 +10,7 @@ excerpt: "和平，土地，面包"
 * content
 {:toc}
 
-> 这是一道很好的动态规划入门题目
-
-## 53. Maximum Subarray
+## 53. 最大子序和
 
 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
 
@@ -27,6 +25,12 @@ excerpt: "和平，土地，面包"
 进阶:
 
 如果你已经实现复杂度为 O(n) 的解法，尝试使用更为精妙的分治法求解。
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/maximum-subarray](https://leetcode-cn.com/problems/maximum-subarray)
+
+Link：[https://leetcode.com/problems/maximum-subarray](https://leetcode.com/problems/maximum-subarray)
 
 ## 暴力破解
 
@@ -87,7 +91,7 @@ O(N)
 
 ### 递推公式
 
-```
+```python
 dp[i] = max(nums[i], nums[i] + dp[i - 1])
                ^             ^
              新起点      新元素与前面拼接上
@@ -226,9 +230,3 @@ class Solution:
 ```
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/maximum-subarray
-
-Link：https://leetcode.com/problems/maximum-subarray
