--- a/_posts/leetcode/leetcode100/2020-09-23-leetcode-54.md
+++ b/_posts/leetcode/leetcode100/2020-09-23-leetcode-54.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 54
-title: "54. 螺旋矩阵(Spiral Matrix)"
+title: "LeetCode-54.螺旋矩阵(Spiral Matrix)"
 categories: Leetcode
 tags: Array
 excerpt: "一将功成万骨枯"
@@ -10,7 +10,7 @@ excerpt: "一将功成万骨枯"
 * content
 {:toc}
 
-## 54. Spiral Matrix
+## 54. 螺旋矩阵
 
 给定一个包含 m x n 个元素的矩阵（m 行, n 列），请按照顺时针螺旋顺序，返回矩阵中的所有元素。
 
@@ -37,6 +37,12 @@ excerpt: "一将功成万骨枯"
 ]
 输出: [1,2,3,4,8,12,11,10,9,5,6,7]
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/spiral-matrix/](https://leetcode-cn.com/problems/spiral-matrix/)
+
+Link：[https://leetcode.com/problems/spiral-matrix/](https://leetcode.com/problems/spiral-matrix/)
 
 ## 模拟法
 
@@ -82,9 +88,3 @@ class Solution:
 
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/spiral-matrix/
-
-Link：https://leetcode.com/problems/spiral-matrix/
