--- a/_posts/leetcode/leetcode200/2021-01-20-leetcode-112.md
+++ b/_posts/leetcode/leetcode200/2021-01-20-leetcode-112.md
@@ -82,7 +82,7 @@ class Solution:
         return False
 ```
 
-去掉Helper函数的递归，一开始可能不太容易直接写出这个，可以先用上面的尝试，满满的过度到下面
+去掉Helper函数的递归，一开始可能不太容易直接写出这个，可以先用上面的尝试，慢慢的过度到下面
 
 ```python
 # Definition for a binary tree node.
