--- a/_posts/leetcode/leetcode100/2020-09-24-leetcode-55.md
+++ b/_posts/leetcode/leetcode100/2020-09-24-leetcode-55.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 55
-title: "55. 跳跃游戏(Jump Game)"
+title: "LeetCode-55.跳跃游戏(Jump Game)"
 categories: Leetcode
 tags: Array Greedy
 excerpt: "跳出____"
@@ -10,7 +10,7 @@ excerpt: "跳出____"
 * content
 {:toc}
 
-## 55. Jump Game
+## 55. 跳跃游戏
 
 给定一个非负整数数组，你最初位于数组的第一个位置。
 
@@ -33,6 +33,12 @@ excerpt: "跳出____"
 输出: false
 解释: 无论怎样，你总会到达索引为 3 的位置。但该位置的最大跳跃长度是 0 ， 所以你永远不可能到达最后一个位置。
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/jump-game/](https://leetcode-cn.com/problems/jump-game/)
+
+Link：[https://leetcode.com/problems/jump-game/](https://leetcode.com/problems/jump-game/)
 
 ## 贪心
 
@@ -91,11 +97,4 @@ class Solution:
         return True
 ```
 
-
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/jump-game/
-
-Link：https://leetcode.com/problems/jump-game/
