--- a/_posts/leetcode/leetcode100/2020-09-24-leetcode-56.md
+++ b/_posts/leetcode/leetcode100/2020-09-24-leetcode-56.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 56
-title: "56. 合并区间(Merge Intervals)"
+title: "LeetCode-56.合并区间(Merge Intervals)"
 categories: Leetcode
 tags: Array Sort
 excerpt: "等待____"
@@ -16,7 +16,7 @@ excerpt: "等待____"
 
 直到有足够的原始积累，复利才会有可观的收益。
 
-## 56. Merge Intervals
+## 56. 合并区间
 
 给出一个区间的集合，请合并所有重叠的区间。
 
@@ -35,6 +35,12 @@ excerpt: "等待____"
 输出: [[1,5]]
 解释: 区间 [1,4] 和 [4,5] 可被视为重叠区间。
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/merge-intervals/](https://leetcode-cn.com/problems/merge-intervals/)
+
+Link：[https://leetcode.com/problems/merge-intervals/](https://leetcode.com/problems/merge-intervals/)
 
 ## 排序
 
@@ -75,9 +81,3 @@ class Solution:
 ```
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/merge-intervals/
-
-Link：https://leetcode.com/problems/merge-intervals/
