--- a/_posts/leetcode/leetcode200/2021-02-22-leetcode-121.md
+++ b/_posts/leetcode/leetcode200/2021-02-22-leetcode-121.md
@@ -14,7 +14,7 @@ excerpt: "赚钱是一种能力"
 
 买卖股票是一系列问题，从简单到困难都有。
 
-## 120. 三角形最小路径和
+## 121. 买卖股票的最佳时机
 
 给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。
 
