Fix. 错误的标题

--- a/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
+++ b/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 index: 123
-title: "LeetCode-123.买卖股票的最佳时机 III(https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iii/)"
+title: "LeetCode-123.买卖股票的最佳时机 III(Best Time to Buy and Sell Stock III)"
 categories: Leetcode
 tags: Array Dynamic-programming
-excerpt: ""
+excerpt: "看着高楼大厦突然感觉自己好渺小"
 ---
 
 * content
@@ -73,7 +73,9 @@ Link：[https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iii/](http
 
 这里两次买卖人不能有重叠，那就分成两部分，变成了两个LeetCode-121
 
-不出意外的超时了
+前一段第i天一定是卖了，所以可以继续买
+
+但，不出意外的超时了
 
 ```python
 class Solution:
