--- a/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
+++ b/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
@@ -18,7 +18,7 @@ excerpt: "看着高楼大厦突然感觉自己好渺小"
 
 给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。
 
-设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。
+设计一个算法来计算你所能获取的最大利润。你最多可以完成**两笔**交易。
 
 注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
 
@@ -71,9 +71,9 @@ Link：[https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iii/](http
 
 ## 暴力破解
 
-这里两次买卖人不能有重叠，那就分成两部分，变成了两个LeetCode-121
+这里两次买卖间不能有重叠，那就分成两部分，变成了两个LeetCode-121
 
-前一段第i天一定是卖了，所以可以继续买
+前一段第i天一定是卖了，所以当天可以继续买
 
 但，不出意外的超时了
 
