Update. 力扣123 part2

--- a/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
+++ b/_posts/leetcode/leetcode200/2021-02-23-leetcode-123.md
@@ -105,14 +105,57 @@ class Solution:
         return profit
 ```
 
-## 状态机
+## 动态规划 + 状态机
 
-// TBD
+O(N)
 
+![草稿说明](https://geemaple.github.io/images/leetcode-sketch-algorithm-123.png)
 
+每一个状态也可以什么都不做，那就保持愿状态不变
 
+### 状态
 
+```
+s0什么都不做，依然在状态s0
+s0如果买入，就到状态s1
 
+s1什么都不做，依然在状态s1
+s1如果卖出，就到状态s2
+
+s2什么都不做，依然在状态s2
+s2如果买入，就到状态s3
+
+s3什么都不做，依然在状态s3
+s3如果卖出，就到状态s4
+```
+
+### 状态转移
+
+```python
+# 假设，当前状态S, 前一个状态X
+# 可以什么都做仍然在状态S，如果买入，相当于损失了钱
+S = max(S, X - price)
+
+# 类似的，卖出
+S = Max(S, X + price)
+```
+
+代码如下
+
+```python
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        
+        s0 = 0
+        s1 = s2 = s3 = s4 = float('-inf')
+        for price in prices:
+            s1 = max(s1, s0 - price)
+            s2 = max(s2, s1 + price)
+            s3 = max(s3, s2 - price)
+            s4 = max(s4, s3 + price)
+              
+        return s4
+```
 
 ## 动态规划
 
@@ -139,11 +182,9 @@ dp[k][i] = prices[i] - prices[j] + dp[k - 1][j - 1]
 
 两种情况取最大值
 
-### 初始化
+### 初始化与边界条件
 
 对于0次交易，收益都为0
-
-### 边界条件
 
 注意, 遍历j的时候，要从1开始
 
