--- a/_posts/leetcode/leetcode100/2020-09-25-leetcode-57.md
+++ b/_posts/leetcode/leetcode100/2020-09-25-leetcode-57.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 57
-title: "57. 插入区间(Insert Interval)"
+title: "LeetCode-57.插入区间(Insert Interval)"
 categories: Leetcode
 tags: Array Sort
 excerpt: "阴晴圆缺"
@@ -10,7 +10,7 @@ excerpt: "阴晴圆缺"
 * content
 {:toc}
 
-## 57. Insert Interval
+## 57. 插入区间
 
 给出一个无重叠的 ，按照区间起始端点排序的区间列表。
 
@@ -30,6 +30,12 @@ excerpt: "阴晴圆缺"
 输出：[[1,2],[3,10],[12,16]]
 解释：这是因为新的区间 [4,8] 与 [3,5],[6,7],[8,10] 重叠。
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/insert-interval/](https://leetcode-cn.com/problems/insert-interval/)
+
+Link：[https://leetcode.com/problems/insert-interval/](https://leetcode.com/problems/insert-interval/)
 
 ## 排序
 
@@ -96,9 +102,3 @@ class Solution:
 ```
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/insert-interval/
-
-Link：https://leetcode.com/problems/insert-interval/
