--- a/_posts/leetcode/leetcode100/2020-09-25-leetcode-58.md
+++ b/_posts/leetcode/leetcode100/2020-09-25-leetcode-58.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 index: 58
-title: "58. 最后一个单词的长度(Length of Last Word)"
+title: "LeetCode-58.最后一个单词的长度(Length of Last Word)"
 categories: Leetcode
 tags: String
 excerpt: "狼烟起"
@@ -10,7 +10,7 @@ excerpt: "狼烟起"
 * content
 {:toc}
 
-## 58. Length of Last Word
+## 58. 最后一个单词的长度
 
 给定一个仅包含大小写字母和空格 ' ' 的字符串 s，返回其最后一个单词的长度。如果字符串从左向右滚动显示，那么最后一个单词就是最后出现的单词。
 
@@ -24,6 +24,12 @@ excerpt: "狼烟起"
 输入: "Hello World"
 输出: 5
 ```
+
+来源：力扣（LeetCode）
+
+链接：[https://leetcode-cn.com/problems/length-of-last-word/](https://leetcode-cn.com/problems/length-of-last-word/)
+
+Link：[https://leetcode.com/problems/length-of-last-word/](https://leetcode.com/problems/length-of-last-word/)
 
 ## 倒着数
 
@@ -73,9 +79,3 @@ for循环，注意结尾空字符的情况
 后续时间充裕的时候，一定要写代码，保持一个良好的状态
 
 --End--
-
-来源：力扣（LeetCode）
-
-链接：https://leetcode-cn.com/problems/length-of-last-word/
-
-Link：https://leetcode.com/problems/length-of-last-word/
