--- a/_posts/leetcode/leetcode200/2021-03-02-leetcode-124.md
+++ b/_posts/leetcode/leetcode200/2021-03-02-leetcode-124.md
@@ -4,7 +4,7 @@ index: 124
 title: "LeetCode-124.二叉树中的最大路径和(Binary Tree Maximum Path Sum)"
 categories: Leetcode
 tags: Tree Depth-first-search Recursion
-excerpt: "年少有为"
+excerpt: "假如我年少有为"
 ---
 
 * content
