--- a/_posts/leetcode/leetcode200/2021-03-03-leetcode-127.md
+++ b/_posts/leetcode/leetcode200/2021-03-03-leetcode-127.md
@@ -4,7 +4,7 @@ index: 127
 title: "LeetCode-127.单词接龙(Word Ladder)"
 categories: Leetcode
 tags: Breath-first-search
-excerpt: "倒影"
+excerpt: "风林一叶下"
 ---
 
 * content
@@ -66,9 +66,9 @@ O(NL)
                |
              'hot'
             /     \
-         'dot'   'lot'
+         'dot' - 'lot'
            |       |
-         'dog'   'log'
+         'dog' - 'log'
             \     /
              'cog'
 ```
@@ -130,20 +130,20 @@ class Solution:
         if endWord not in wordset:
             return 0
         
-        distance = 0
+        level = 0
         visited = set([beginWord])
         queue = deque([beginWord])
         
         while len(queue) > 0:
             
             count = len(queue)
-            distance += 1
+            level += 1
             
             for i in range(count):
                 word = queue.popleft()
  
                 if word == endWord:
-                    return distance
+                    return level
                 
                 for target in self.findNeighbors(word, wordset, visited):    
                     queue.append(target)
@@ -181,17 +181,17 @@ class Solution:
         
         wordset = set(wordList)        
         queue = deque([beginWord])
-        distance = 0
+        level = 0
         
         while len(queue) > 0:
             count = len(queue)
-            distance += 1
+            level += 1
             
             for i in range(count):
                 word = queue.popleft()
                 
                 if word == endWord:
-                    return distance
+                    return level
                 
                 for j in range(len(word)):
                     for k in 'abcdefghijklmnopqrstuvwxyz':
