--- a/_posts/leetcode/leetcode200/2021-03-03-leetcode-126.md
+++ b/_posts/leetcode/leetcode200/2021-03-03-leetcode-126.md
@@ -151,15 +151,112 @@ class Solution:
         return res
 ```
 
-## 宽度优先搜索
+另一种风格，创建的树，只有上一层和下一层有关联，其他关联都被去掉了：
 
-O(N)
+```python
+from collections import defaultdict
+class Solution:
+    def findLadders(self, beginWord: str, endWord: str, wordList: List[str]) -> List[List[str]]:
+        wordset = set(wordList)
+        if endWord not in wordset:
+            return []
 
-### 标准宽搜
+        tree = defaultdict(set)
+        level = set([beginWord])
+        found = False
 
-//TBD
+        while len(level) > 0 and not found:
+            wordset -= level
+            new_level = set()
+            
+            for word in level:
+                for i in range(len(word)):
+                    for char in 'abcdefghijklmnopqrstuvwxyz':
+                        candidate = word[:i] + char + word[i + 1:]
+                        if candidate in wordset:
+                            new_level.add(candidate)
+                            tree[word].add(candidate)
+                            found = candidate == endWord
+                                
+            level = new_level
+    
+        res = []
+        self.dfs(beginWord, endWord, tree, [beginWord], res)
+        return res
+    
+    def dfs(self, word: str, endWord: str, tree: dict[str : set], path: list[str], res:list[list[str]]):
+        if word == endWord:
+            res.append(list(path))
+            return
+            
+        for candidate in tree[word]:
+            path.append(candidate)
+            self.dfs(candidate, endWord, tree, path, res)
+            path.pop()
+```
 
-### 分层遍历
+### 双端遍历
+
+上述代码的搜索数量和分支数目+深度有关系，假设深度有4层，每一个节点有两个分支，那么从开始到结束，遍历节点数目 1 + 2 + 4 + 8 + 16 = 31
+
+如果从两端开始 2 * (1 + 2 + 4) = 14, 遍历节点数目会少很多
+
+实际上，是选择那一边分叉比较少，就从哪边开始遍历
+
+```python
+from collections import defaultdict
+class Solution:
+    def findLadders(self, beginWord: str, endWord: str, wordList: List[str]) -> List[List[str]]:
+        wordset = set(wordList)
+        if endWord not in wordset:
+            return []
+
+        tree = defaultdict(set)
+        front_level = set([beginWord])
+        back_level = set([endWord])
+        
+        reverse = False
+        found = False
+        while len(front_level) > 0 and not found:
+            
+            wordset -= front_level
+            new_level = set()
+            
+            for word in front_level:
+                for i in range(len(word)):
+                    for char in 'abcdefghijklmnopqrstuvwxyz':
+                        candidate = word[:i] + char + word[i + 1:]
+                        if candidate in wordset:
+                            new_level.add(candidate)
+                            found = candidate == endWord
+                        
+                            if reverse:
+                                tree[candidate].add(word)
+                            else:
+                                tree[word].add(candidate)
+                                
+            front_level = new_level
+            
+            if len(front_level) < len(back_level):
+                front_level, back_level = back_level, front_level
+                reverse = not reverse
+        
+        res = []
+        self.dfs(beginWord, endWord, tree, [beginWord], res)
+        return res
+    
+    def dfs(self, word: str, endWord: str, tree: dict[str : set], path: list[str], res:list[list[str]]):
+        if word == endWord:
+            res.append(list(path))
+            return
+            
+        for candidate in tree[word]:
+            path.append(candidate)
+            self.dfs(candidate, endWord, tree, path, res)
+            path.pop()
+```
+
+### 宽度优先搜索(分层遍历)
 
 ```python
              'hit'
@@ -223,9 +320,5 @@ class Solution:
             
         return []
 ```
-
-### 双端遍历
-
-//TBD
 
 --End--
