--- a/_posts/leetcode/leetcode200/2021-03-03-leetcode-126.md
+++ b/_posts/leetcode/leetcode200/2021-03-03-leetcode-126.md
@@ -201,7 +201,7 @@ class Solution:
 
 如果从两端开始 2 * (1 + 2 + 4) = 14, 遍历节点数目会少很多
 
-实际上，是选择那一边分叉比较少，就从哪边开始遍历
+​实际上，是哪一边分叉比较少，就从哪边开始遍历
 
 ```python
 from collections import defaultdict
@@ -256,7 +256,7 @@ class Solution:
             path.pop()
 ```
 
-### 宽度优先搜索(分层遍历)
+## 宽度优先搜索(分层遍历)
 
 ```python
              'hit'
