--- a/_posts/leetcode/leetcode200/2021-03-22-leetcode-128.md
+++ b/_posts/leetcode/leetcode200/2021-03-22-leetcode-128.md
@@ -4,7 +4,7 @@ index: 128
 title: "LeetCode-128.最长连续序列(Longest Consecutive Sequence)"
 categories: Leetcode
 tags: Array Union-find
-excerpt: ""
+excerpt: "威尔士小矿工\"耶稣比利\""
 ---
 
 * content
