--- a/_posts/Algorithm/2020-12-14-sorting.md
+++ b/_posts/Algorithm/2020-12-14-sorting.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "排序算法"
+title: "算法 - 常见排序算法"
 categories: Algorithm
 tags: Sort
 excerpt: "常用排序"
@@ -172,13 +172,12 @@ O(N * logN)
 利用大堆的性质，每次拿出来root最大的，放在后面
 
 ```python
-           0                       1
-        /     \                 /     \
-      1         2             2         3
-    /   \      /            /   \      /
-   3     4    5            4     5    6
+           0     
+        /     \    
+      1         2  
+    /   \      /     
+   3     4    5       
 # 以 0 为跟节点的堆, left = 2i + 1, right = 2i + 2
-# 以 1 为跟节点的堆, left = 2i, right = 2i + 1
 ```
 
 有点像选择排序，每次拿到最大的，放入到对应的位置
