--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -104,6 +104,25 @@ math.log(2 ** 64, 1.1) ≈ 465
 2. ```2^31 - 1 = 2147483647```, 这是32-bit整数最大能表示的数字
 
 
+## 位运算
+
+```python
+#  0s 和 1s 分别表示只由 0 或 1 构成的二进制数字
+x ^ 0s = x
+x ^ 1s = ~x
+x ^ x = 0
+
+x & 0s = 0
+x & 1s = 1
+x & x = x
+
+x | 0s = x
+x | 1s = 1s
+x | x = x
+
+n & (n - 1) 消掉最低位的一个1
+n & (-n) 得到最低位的那个1 # -n = ~n + 1
+```
 
 ## 最大公因数
 
