add new section

--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -333,4 +333,23 @@ class Solution:
         
         return res.val
 ```
+
+## 拒绝采样
+
+拒绝采样（Rejection Sampling）是一种从复杂分布中生成样本的统计方法，特别是在目标分布难以直接采样时使用。利用一个简单的分布来生成候选样本，然后根据某个接受概率来决定是否接受这些候选样本
+
+```python
+# 40 ~ 48 都被拒绝了，如果拒绝的数量太多，效率就非常低下了
+class Solution:
+    def rand10(self):
+        """
+        :rtype: int
+        """
+        res = 40
+        while res >= 40:
+            res = 7 * (rand7() - 1) + rand7() - 1
+
+        return res % 10 + 1
+```
+
 --End--
