add segment tree refactor algorithm cate

--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -140,7 +140,8 @@ def gcd(a, b):
 
 因为余数现在是 0，所以最大公约数是最后一个非零的余数，即 6。
 
-
+可以用GCD来简化分子和分母分数表示，比如6/8, (6/gcd)/(8/gcd) = 3/4
+ 
 ## 最小公倍数
 
 ```python
