--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -111,6 +111,8 @@ math.log(2 ** 64, 1.1) ≈ 465
 x ^ 0s = x
 x ^ 1s = ~x
 x ^ x = 0
+x ^ (~x) = 1s
+a ^ b = c; a ^ c = b; b ^ c = a; #swap
 
 x & 0s = 0
 x & 1s = 1
