--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -158,45 +158,16 @@ def xgcd(a, b):
 
 ```python
 # 埃拉托斯特尼筛法
-class Solution:
-    def countPrimes(self, n: int) -> int:
-        
-        if n <= 2:
-            return 0
+def getPrimes(self, n):
+    primes = [True for i in range(n)]
+    primes[0] = primes[1] = False
 
-        prime = [True for i in range(n)]
-        count = n - 2 # 去掉0和1
+    for i in range(2, int(n ** 0.5) + 1):  # 乘法的对称性, [1x10 2x5 5x2 10x1]
+        if primes[i]:
+            for j in range(i * i, n, i): # # 把i的倍数标记为非质数
+                primes[j] = False
 
-        for i in range(2, int(n ** 0.5) + 1): # 乘法的对称性, [1x10 2x5 5x2 10x1]
-            if prime[i]:
-                for j in range(i * i, n, i): 
-                    # 所有>1的自然数都可以分写成质数的乘积, 对于 k * i (k < i)的部分已经被标记过, 
-                    # 例如7x7的[2x7, 3x7, 4x7=2x14, 5x7, 6x7=2x21]分别被2，3，5标记过
-                    if prime[j]:
-                        prime[j] = False
-                        count -= 1
-        return count
-```
-
-此外，偶数是不用判断的，可以直接跳过
-
-```python
-class Solution:
-    def countPrimes(self, n: int) -> int:
-        
-        if n <= 2:
-            return 0
-
-        prime = [True for i in range(n)] #保留偶数空间，使代码更清晰些
-        count = n // 2 - 1 # 去掉偶数 和 1 
-        for i in range(3, int(n ** 0.5) + 1, 2):
-            if prime[i]:
-                for j in range(i * i, n, 2 * i):  #step = 2倍的i, 质数 x 质数 = 奇数(2除外)
-                    if prime[j]:
-                        prime[j] = False
-                        count -= 1
-
-        return count + 1 # 加上2
+    return primes
 ```
 
 ## 进制转换
