--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -157,7 +157,8 @@ def xgcd(a, b):
 ## 质数
 
 ```python
-# 埃拉托斯特尼筛法
+# 埃拉托斯特尼筛法 复杂度O(n * log log n) 
+# https://www.wolframalpha.com/input?i=plot+xlog%28log%28x%29%29+and+log%28x%29+and+x+from+1+to+10000
 def getPrimes(self, n):
     primes = [True for i in range(n)]
     primes[0] = primes[1] = False
